--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
   },
   "dependencies": {
     "gatsby": "^5.13.7",
+    "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-layout": "^4.13.1",
+    "gatsby-plugin-mdx": "^5.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
+    "github-markdown-css": "^5.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
